:+1: Update ps_jewelry

--- a/ps_jewelry/index.html
+++ b/ps_jewelry/index.html
@@ -323,133 +323,213 @@ This documentation was only made by the Documenter (except the images)">
 					<div class="col-sm-4">
 						<ul class="list-group list-group-flush">
 							<li class="list-group-item">
-								<p><span >1</span>&nbsp;&nbsp;&nbsp;
-								<a href="javascrip:void(0)"> <b>Logo Block</b></a></p>
+								<p><span class="rounded-circle" >1</span>&nbsp;&nbsp;&nbsp;
+								<a href="javascrip:void(0)"><b>Social block</b></a></p>
 							</li>
 							<li class="list-group-item">
-								<span class="bt-cir">2</span>&nbsp;&nbsp;&nbsp;
-								<a href="javascrip:void(0)"> Megamenu Block</a>
+								<span class="rounded-circle">2</span>&nbsp;&nbsp;&nbsp;
+								<a href="javascrip:void(0)"><b>Logo block</b></a>
 							</li>
 							<li class="list-group-item">
-								<span class="bt-cir">3</span>&nbsp;&nbsp;&nbsp;
-								<a href="javascrip:void(0)"> Cart Block</a>
+								<span class="rounded-circle">3</span>&nbsp;&nbsp;&nbsp;
+								<a href="javascrip:void(0)"><b>Header right block</b></a>
 							</li>
 							<li class="list-group-item">
-								<span class="bt-cir"> 4 </span>&nbsp;&nbsp;&nbsp;
-								<a href="javascrip:void(0)">Menu vertical Block</a>
+								<span class="rounded-circle"> 4 </span>&nbsp;&nbsp;&nbsp;
+								<a href="javascrip:void(0)"><b>Babi menu</b></a>
 							</li>
 							<li class="list-group-item">
-								<span class="bt-cir">5</span>&nbsp;&nbsp;&nbsp;
-								<a href="javascrip:void(0)">Slider Block </a>
+								<span class="rounded-circle">5</span>&nbsp;&nbsp;&nbsp;
+								<a href="javascrip:void(0)"><b>Babi slider</b></a>
 							</li>
 							<li class="list-group-item">
-								<span class="bt-cir">6</span>&nbsp;&nbsp;&nbsp;
-								<a href="javascrip:void(0)">Category Block</a>
+								<span class="rounded-circle">6</span>&nbsp;&nbsp;&nbsp;
+								<a href="javascrip:void(0)"><b>Custom text blocks</b></a>
 							</li>
 							<li class="list-group-item">
-								<span class="bt-cir">7</span>&nbsp;&nbsp;&nbsp;
-								<a href="javascrip:void(0)">Banner Block</a>
+								<span class="rounded-circle">7</span>&nbsp;&nbsp;&nbsp;
+								<a href="javascrip:void(0)"><b>Babi homeStatic</b></a>
 							</li>
 							<li class="list-group-item">
-								<span class="bt-cir">8</span>&nbsp;&nbsp;&nbsp;
-								<a href="javascrip:void(0)">CopyRight Block</a>
+								<span class="rounded-circle">8</span>&nbsp;&nbsp;&nbsp;
+								<a href="javascrip:void(0)"><b>Babi products</b></a>
 							</li>
 							<li class="list-group-item">
-								<span class="bt-cir">9</span>&nbsp;&nbsp;&nbsp;
-								<a href="javascrip:void(0)">Link Page Block</a>
+								<span class="rounded-circle">9</span>&nbsp;&nbsp;&nbsp;
+								<a href="javascrip:void(0)"><b>Babi testimonial</b></a>
 							</li>
 							<li class="list-group-item">
-								<span class="bt-cir">10</span>&nbsp;&nbsp;&nbsp;
-								<a href="javascrip:void(0)">Newsletter Block</a>
+								<span class="rounded-circle">10</span>&nbsp;&nbsp;&nbsp;
+								<a href="javascrip:void(0)"><b>Babi blog</b></a>
+							</li>
+							
+							<li class="list-group-item">
+								<span class="rounded-circle">11</span>&nbsp;&nbsp;&nbsp;
+								<a href="javascrip:void(0)"><b>CopyRight block</b></a>
 							</li>
 							<li class="list-group-item">
-								<span class="bt-cir">11</span>&nbsp;&nbsp;&nbsp;
-								<a href="javascrip:void(0)">Icon Social Block </a>
+								<span class="rounded-circle">12</span>&nbsp;&nbsp;&nbsp;
+								<a href="javascrip:void(0)"><b>Link page block</b></a>
+							</li>
+							<li class="list-group-item">
+								<span class="rounded-circle">13</span>&nbsp;&nbsp;&nbsp;
+								<a href="javascrip:void(0)"><b>Newsletter block</b></a>
+							</li>
+							<li class="list-group-item">
+								<span class="rounded-circle">14</span>&nbsp;&nbsp;&nbsp;
+								<a href="javascrip:void(0)"><b>Icon social block</b></a>
 							</li>
 						</ul>
 					</div>
 				</div>
 				<div class="extension-config-item">
-					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-logo" href="#"> 1. Logo Block</a> </h2>
+					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-header-social" href="#"> 1. Social block</a> </h2>
+					<div id='extension-header-social' class="extension-config-item-content collapse" aria-expanded="false">
+						<p><em><strong>Backend Settings:</strong></em></p>
+						<p><em><strong>Step 1:</strong></em> In the Prestashop Admin Panel, navigate to <strong>IMPROVE &gt;&gt; Modules &gt;&gt; Modules and Services &gt;&gt; Installed Modules</strong> look for “<strong>Babi Dashborad</strong>” module.</p>
+						<p><em><strong>Step 2:</strong></em> You navigate this module  &gt;&gt; Social  to  change</p>
+					</div>
+				</div>
+				<div class="extension-config-item">
+					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-logo" href="#"> 2. Logo block</a> </h2>
 					<div id='extension-logo' class="extension-config-item-content collapse" aria-expanded="false">
 						<p><em><strong>Backend Settings:</strong></em></p>
 						<p>In the Prestashop Admin Panel, navigate to Design &gt;&gt; Theme & Logo &gt;&gt; Tab Logo &gt;&gt; Click "Add file" to change.</p>
 					</div>
 				</div>
 				<div class="extension-config-item">
-					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-2" href="#"> 2.  Megamenu Block</a> </h2>
+					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-3" href="#"> 3. Header right blog</a> </h2>
+					<div id='extension-3' class="extension-config-item-content collapse" aria-expanded="false">
+						<h5>- Cart Block</h5>
+						<p><em><strong>Backend Settings:</strong></em></p>
+						<p> In the Prestashop Admin Panel, navigate to <strong>IMPROVE &gt;&gt; Modules &gt;&gt; Modules and Services &gt;&gt; Installed Modules</strong> look for “<strong>Shopping cart</strong>” module.</p>
+
+						<h5>- Menu vertical Block</h5>
+						<p><em><strong>Backend Settings:</strong></em></p>
+						<p> In the Prestashop Admin Panel, navigate to <strong>IMPROVE &gt;&gt; Modules &gt;&gt; Modules and Services &gt;&gt; Installed Modules</strong> look for “<strong>Shopping cart , Contact information  ,Currency block</strong>” module.</p>
+
+					</div>
+				</div>
+				<div class="extension-config-item">
+					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-2" href="#"> 4. Babi menu</a> </h2>
 					<div id='extension-2' class="extension-config-item-content collapse" aria-expanded="false">
 						<p><em><strong>Backend Settings:</strong></em></p>
 						<p><em><strong>Step 1:</strong></em> In the Prestashop Admin Panel, navigate to <strong>IMPROVE &gt;&gt; Modules &gt;&gt; Modules and Services &gt;&gt; Installed Modules</strong> look for “<strong> Babi Menu</strong>” module.</p>
 						<p><em><strong>Step 2:</strong></em> You could follow guide <a href="#babi_megamenu" target="_blank">here</a> to configure this module .</p>
 					</div>
 				</div>
+
 				<div class="extension-config-item">
-					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-3" href="#"> 3. Cart Block</a> </h2>
-					<div id='extension-3' class="extension-config-item-content collapse" aria-expanded="false">
-						<p><em><strong>Backend Settings:</strong></em></p>
-						<p> In the Prestashop Admin Panel, navigate to <strong>IMPROVE &gt;&gt; Modules &gt;&gt; Modules and Services &gt;&gt; Installed Modules</strong> look for “<strong>Shopping cart</strong>” module.</p>
-					</div>
-				</div>
-				<div class="extension-config-item">
-					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-4" href="#"> 4. Menu vertical Block </a> </h2>
-					<div id='extension-4' class="extension-config-item-content collapse" aria-expanded="false">
-						<p><em><strong>Backend Settings:</strong></em></p>
-						<p> In the Prestashop Admin Panel, navigate to <strong>IMPROVE &gt;&gt; Modules &gt;&gt; Modules and Services &gt;&gt; Installed Modules</strong> look for “<strong>Shopping cart , Contact information  ,Currency block</strong>” module.</p>
-					</div>
-				</div>
-				<div class="extension-config-item">
-					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-5" href="#"> 5. Slider block </a> </h2>
+					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-5" href="#"> 5.Babi Slider </a> </h2>
 					<div id='extension-5' class="extension-config-item-content collapse" aria-expanded="false">
 						<p><em><strong>Backend Settings:</strong></em></p>
 						<p><em><strong>Step 1:</strong></em> In the Prestashop Admin Panel, navigate to <strong>IMPROVE &gt;&gt; Modules &gt;&gt; Modules and Services &gt;&gt; Installed Modules</strong> look for “<strong> Babi Slider </strong>” module.</p>
 						<p><em><strong>Step 2:</strong></em> You could follow guide <a href="#babi_layer" target="_blank">here</a> to configure this module .</p>
 					</div>
 				</div>
+
 				<div class="extension-config-item">
-					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-6" href="#"> 6. Category Block </a> </h2>
+					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-6" href="#"> 6. Custom text blocks </a> </h2>
 					<div id='extension-6' class="extension-config-item-content collapse" aria-expanded="false">
 						<p><em><strong>Backend Settings:</strong></em></p>
-						<p><em><strong>Step 1:</strong></em> In the Prestashop Admin Panel, navigate to <strong>IMPROVE &gt;&gt; Modules &gt;&gt; Modules and Services &gt;&gt; Installed Modules</strong> look for “<strong> Cs Category </strong>” module.</p>
-						<p><em><strong>Step 2:</strong></em> You could follow guide <a href="#babi_category" target="_blank">here</a> to configure this module .</p>
+						<p><em><strong>Step 1:</strong></em> In the Prestashop Admin Panel, navigate to <strong>IMPROVE &gt;&gt; Modules &gt;&gt; Modules and Services &gt;&gt; Installed Modules</strong> look for “<strong> Custom text blocks </strong>” module.</p>
+						<p><em><strong>Step 2:</strong></em> You could Add this code to show demo:</p>
+<pre><xmp>
+<div class="home-intro-service">
+	<div class="container">
+		<div class="row">
+			<div class="intro-service-content">
+				<div class="service-item col-md-4 wow fadeInUp  animated" style="visibility: visible; animation-name: fadeInUp;">
+					<p class="title">Free shipping</p>
+					<p class="caption">All order over $300</p>
+				</div>
+				<div class="service-item col-md-4 wow fadeInUp  animated" style="visibility: visible; animation-name: fadeInUp;">
+					<p class="title">Support customer</p>
+					<p class="caption">Support 24/7</p>
+				</div>
+				<div class="service-item col-md-4 wow fadeInUp  animated" style="visibility: visible; animation-name: fadeInUp;">
+					<p class="title">Secure payments</p>
+					<p class="caption">Support 24/7</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="home-intro-title wow fadeInUp  animated" style="visibility: visible; animation-name: fadeInUp;">
+	<div class="container">
+		<div class="row">
+			<div class="intro-title-content">It started with a simple idea: Create quality, well-designed products that I wanted myself.</div>
+		</div>
+	</div>
+</div>
+</xmp></pre>
 					</div>
 				</div>
+
 				<div class="extension-config-item">
-					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-7" href="#"> 7. Banner Block </a> </h2>
-					<div id='extension-7' class="extension-config-item-content collapse" aria-expanded="false">
+					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-homestatic" href="#"> 7. Babi homeStatic </a> </h2>
+					<div id='extension-homestatic' class="extension-config-item-content collapse" aria-expanded="false">
 						<p><em><strong>Backend Settings:</strong></em></p>
-						<p><em><strong>Step 1:</strong></em> In the Prestashop Admin Panel, navigate to <strong>IMPROVE &gt;&gt; Modules &gt;&gt; Modules and Services &gt;&gt; Installed Modules</strong> look for “<strong> Cs 2 Banner </strong>” module.</p>
+						<p><em><strong>Step 1:</strong></em> In the Prestashop Admin Panel, navigate to <strong>IMPROVE &gt;&gt; Modules &gt;&gt; Modules and Services &gt;&gt; Installed Modules</strong> look for “<strong> Babi homeStatic </strong>” module.</p>
 						<p><em><strong>Step 2:</strong></em> You could configure this module like the <a href="#">illustration</a></p>
 					</div>
 				</div>
+
 				<div class="extension-config-item">
-					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-8" href="#"> 8. CopyRight Block </a> </h2>
-					<div id='extension-8' class="extension-config-item-content collapse" aria-expanded="false">
+					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-babi-products" href="#"> 8. Babi products </a> </h2>
+					<div id='extension-babi-products' class="extension-config-item-content collapse" aria-expanded="false">
+						<p><em><strong>Backend Settings:</strong></em></p>
+						<p><em><strong>Step 1:</strong></em> In the Prestashop Admin Panel, navigate to <strong>IMPROVE &gt;&gt; Modules &gt;&gt; Modules and Services &gt;&gt; Installed Modules</strong> look for “<strong>Babi products</strong>” module.</p>
+						<p><em><strong>Step 2:</strong></em> You could configure this module like the <a href="#">illustration</a></p>
+					</div>
+				</div>
+
+				<div class="extension-config-item">
+					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-testimonial" href="#"> 9. Babi testimonial </a> </h2>
+					<div id='extension-testimonial' class="extension-config-item-content collapse" aria-expanded="false">
+						<p><em><strong>Backend Settings:</strong></em></p>
+						<p><em><strong>Step 1:</strong></em> In the Prestashop Admin Panel, navigate to <strong>IMPROVE &gt;&gt; Modules &gt;&gt; Modules and Services &gt;&gt; Installed Modules</strong> look for “<strong>Babi testimonial </strong>” module.</p>
+						<p><em><strong>Step 2:</strong></em> You could configure this module like the <a href="#">illustration</a></p>
+					</div>
+				</div>
+
+				<div class="extension-config-item">
+					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-babi-blog" href="#"> 10. Babi blog </a> </h2>
+					<div id='extension-babi-blog' class="extension-config-item-content collapse" aria-expanded="false">
+						<p><em><strong>Backend Settings:</strong></em></p>
+						<p><em><strong>Step 1:</strong></em> In the Prestashop Admin Panel, navigate to <strong>IMPROVE &gt;&gt; Modules &gt;&gt; Modules and Services &gt;&gt; Installed Modules</strong> look for “<strong> Babi blog</strong>” module.</p>
+						<p><em><strong>Step 2:</strong></em> You could configure this module like the <a href="#">illustration</a></p>
+					</div>
+				</div>
+
+				<div class="extension-config-item">
+					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-11" href="#"> 11. CopyRight Block </a> </h2>
+					<div id='extension-11' class="extension-config-item-content collapse" aria-expanded="false">
 						<p><em><strong>Backend Settings:</strong></em></p>
 						<p><em><strong>Step 1:</strong></em> In the Prestashop Admin Panel, navigate to <strong>IMPROVE &gt;&gt; Modules &gt;&gt; Modules and Services &gt;&gt; Installed Modules</strong> look for “<strong> Link List </strong>” module.</p>
 						<p><em><strong>Step 2:</strong></em> You could configure this module like the <a href="#">illustration</a></p>
 					</div>
 				</div>
 				<div class="extension-config-item">
-					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-9" href="#"> 9. Link List Block </a> </h2>
-					<div id='extension-9' class="extension-config-item-content collapse" aria-expanded="false">
+					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-12" href="#"> 12. Link List Block </a> </h2>
+					<div id='extension-12' class="extension-config-item-content collapse" aria-expanded="false">
 						<p><em><strong>Backend Settings:</strong></em></p>
-						<p><em><strong>Step 1:</strong></em> In the Prestashop Admin Panel, navigate to <strong>IMPROVE &gt;&gt; Modules &gt;&gt; Modules and Services &gt;&gt; Installed Modules</strong> look for “<strong> Cs Theme Cpanel </strong>” module.</p>
+						<p><em><strong>Step 1:</strong></em> In the Prestashop Admin Panel, navigate to <strong>IMPROVE &gt;&gt; Modules &gt;&gt; Modules and Services &gt;&gt; Installed Modules</strong> look for “<strong>Babi Dashborad</strong>” module.</p>
 						<p><em><strong>Step 2:</strong></em> You navigate this module  &gt;&gt; Template Setting &gt;&gt; copyright to  change</p>
 					</div>
 				</div>
 				<div class="extension-config-item">
-					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-10" href="#"> 10. Newsletter Block </a> </h2>
-					<div id='extension-10' class="extension-config-item-content collapse" aria-expanded="false">
+					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-13" href="#"> 13. Newsletter Block </a> </h2>
+					<div id='extension-13' class="extension-config-item-content collapse" aria-expanded="false">
 						<p><em><strong>Backend Settings:</strong></em></p>
-						<p> In the Prestashop Admin Panel, navigate to <strong>IMPROVE &gt;&gt; Modules &gt;&gt; Modules and Services &gt;&gt; Installed Modules</strong> look for “<strong> Cs Display Newsletter </strong>” module.</p>
+						<p> In the Prestashop Admin Panel, navigate to <strong>IMPROVE &gt;&gt; Modules &gt;&gt; Modules and Services &gt;&gt; Installed Modules</strong> look for “<strong> Babi Newsletter </strong>” module.</p>
 					</div>
 				</div>
 				<div class="extension-config-item">
-					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-11" href="#"> 11.Social Block </a> </h2>
-					<div id='extension-11' class="extension-config-item-content collapse" aria-expanded="false">
+					<h2 class="extension-title"><a  data-toggle="collapse" data-target="#extension-14" href="#"> 14.Social Block </a> </h2>
+					<div id='extension-14' class="extension-config-item-content collapse" aria-expanded="false">
 						<p><em><strong>Backend Settings:</strong></em></p>
-						<p><em><strong>Step 1:</strong></em> In the Prestashop Admin Panel, navigate to <strong>IMPROVE &gt;&gt; Modules &gt;&gt; Modules and Services &gt;&gt; Installed Modules</strong> look for “<strong> Cs Theme Cpanel </strong>” module.</p>
+						<p><em><strong>Step 1:</strong></em> In the Prestashop Admin Panel, navigate to <strong>IMPROVE &gt;&gt; Modules &gt;&gt; Modules and Services &gt;&gt; Installed Modules</strong> look for “<strong>Babi Dashborad</strong>” module.</p>
 						<p><em><strong>Step 2:</strong></em> You navigate this module  &gt;&gt; Social  to  change</p>
 					</div>
 				</div>
